# Theophany

./: .gitignore  Cargo.toml  README.md  build.rs  build_release.sh
.cargo/: config.toml
docs/: README.md  configuration.md  exodos.md  storefronts.md  user-guide.md
src/: main.rs
src/bridge/: ai_bridge.rs  app_info.rs  emulator_model.rs  game_model.rs  image_provider.rs  mod.rs  platform_model.rs  playlist_model.rs  retroachievements.rs  settings.rs  static_platforms.rs  store_bridge.rs  video_proxy.rs
src/core/: asset_scanner.rs  db.rs  exodos.rs  hasher.rs  importer.rs  launcher.rs  legendary.rs  metadata_manager.rs  mod.rs  models.rs  ollama.rs  parser.rs  paths.rs  ra_cache.rs  ra_mapping.rs  retroachievements.rs  runtime.rs  scanner.rs  store.rs
src/core/scraper/: client.rs  igdb.rs  launchbox.rs  llm_api.rs  manager.rs  mobygames.rs  mod.rs  ollama_web.rs  search_engine.rs  steam.rs  wikipedia.rs
src/ui/: Main.qml
src/ui/components/: AddSystemDialog.qml  DetailsPanel.qml  EmulatorManager.qml  FilterBar.qml  FlatpakDetailsView.qml  Resizer.qml  Sidebar.qml  TheophanyButton.qml  TheophanyCheckBox.qml  TheophanyComboBox.qml  TheophanyLogo.qml  TheophanyMenu.qml  TheophanyMenuItem.qml  TheophanyMenuSeparator.qml  TheophanyMessageDialog.qml  TheophanyScrollBar.qml  TheophanySpinBox.qml  TheophanySpinner.qml  TheophanySuggestField.qml  TheophanySwitch.qml  TheophanyTextArea.qml  TheophanyTextField.qml  TheophanyTooltip.qml  ViewToggle.qml
src/ui/dialogs/: AboutDialog.qml  AddContentDialog.qml  BulkScrapeDialog.qml  EpicImportDialog.qml  FirstRunWizard.qml  (+25 more)
(+3 files in other folders)
