[package]
name = "theophany"
version = "0.2.1"
edition = "2021"

[dependencies]
qmetaobject = "0.2"
tokio = { version = "1.32", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
crc32fast = "1.3"
sha1 = "0.10"
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "fast-rng", "macro-diagnostics"] }
md5 = "0.7"
zip = "0.6"
log = "0.4"
env_logger = "0.10"
url = "2.5"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
scraper = "0.18"
async-trait = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
rand = "0.8"
urlencoding = "2.1"
linicon = "2.3"
cpp = "0.5.10"
which = "6.0"
quick-xml = "0.31"


[dev-dependencies]
tempfile = "3.24.0"

[build-dependencies]
cpp_build = "0.5.10"
pkg-config = "0.3.32"


